Add titles to examples

--- a/specification/riskiq/Easm/examples/2023-03-01-preview/Tasks_ListTask_MaximumSet_Gen.json
+++ b/specification/riskiq/Easm/examples/2023-03-01-preview/Tasks_ListTask_MaximumSet_Gen.json
@@ -1,5 +1,6 @@
 {
   "operationId": "Tasks_ListTask",
+  "title": "Tasks_ListTask",
   "parameters": {
     "api-version": "2023-03-01-preview",
     "subscriptionId": "00000000-0000-0000-0000-000000000000",
