--- a/specification/riskiq/data-plane/Microsoft.Easm/preview/2023-03-01-preview/easm.json
+++ b/specification/riskiq/data-plane/Microsoft.Easm/preview/2023-03-01-preview/easm.json
@@ -168,6 +168,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Assets_ListAssetResource": {
+            "$ref": "./examples/Assets_ListAssetResource_MaximumSet_Gen.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -213,6 +218,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "Assets_UpdateAssets": {
+            "$ref": "./examples/Assets_UpdateAssets_MaximumSet_Gen.json"
+          }
         }
       }
     },
@@ -253,6 +263,11 @@
                 "type": "string"
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Assets_GetAssetResource": {
+            "$ref": "./examples/Assets_GetAssetResource_MaximumSet_Gen.json"
           }
         }
       }
@@ -318,6 +333,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "DataConnections_ListDataConnection": {
+            "$ref": "./examples/DataConnections_ListDataConnection_MaximumSet_Gen.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -360,6 +380,11 @@
                 "type": "string"
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "DataConnections_GetDataConnection": {
+            "$ref": "./examples/DataConnections_GetDataConnection_MaximumSet_Gen.json"
           }
         }
       },
@@ -408,6 +433,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "DataConnections_PutDataConnection": {
+            "$ref": "./examples/DataConnections_PutDataConnection_MaximumSet_Gen.json"
+          }
         }
       },
       "delete": {
@@ -443,6 +473,11 @@
                 "type": "string"
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "DataConnections_DeleteDataConnection": {
+            "$ref": "./examples/DataConnections_DeleteDataConnection_MaximumSet_Gen.json"
           }
         }
       }
@@ -485,6 +520,11 @@
                 "type": "string"
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "DataConnections_ValidateDataConnection": {
+            "$ref": "./examples/DataConnections_ValidateDataConnection_MaximumSet_Gen.json"
           }
         }
       }
@@ -548,6 +588,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "DiscoveryGroups_ListDiscoGroup": {
+            "$ref": "./examples/DiscoveryGroups_ListDiscoGroup_MaximumSet_Gen.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -590,6 +635,11 @@
                 "type": "string"
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "DiscoveryGroups_GetDiscoGroup": {
+            "$ref": "./examples/DiscoveryGroups_GetDiscoGroup_MaximumSet_Gen.json"
           }
         }
       },
@@ -638,6 +688,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "DiscoveryGroups_PutDiscoGroup": {
+            "$ref": "./examples/DiscoveryGroups_PutDiscoGroup_MaximumSet_Gen.json"
+          }
         }
       }
     },
@@ -675,6 +730,11 @@
                 "type": "string"
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "DiscoveryGroups_RunDiscoGroup": {
+            "$ref": "./examples/DiscoveryGroups_RunDiscoGroup_MaximumSet_Gen.json"
           }
         }
       }
@@ -722,6 +782,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "DiscoveryGroups_ListRuns": {
+            "$ref": "./examples/DiscoveryGroups_ListRuns_MaximumSet_Gen.json"
+          }
         }
       }
     },
@@ -763,6 +828,11 @@
                 "type": "string"
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "DiscoveryGroups_ValidateDiscoGroup": {
+            "$ref": "./examples/DiscoveryGroups_ValidateDiscoGroup_MaximumSet_Gen.json"
           }
         }
       }
@@ -826,6 +896,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "DiscoveryTemplates_ListDiscoTemplate": {
+            "$ref": "./examples/DiscoveryTemplates_ListDiscoTemplate_MaximumSet_Gen.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -869,6 +944,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "DiscoveryTemplates_GetDiscoTemplate": {
+            "$ref": "./examples/DiscoveryTemplates_GetDiscoTemplate_MaximumSet_Gen.json"
+          }
         }
       }
     },
@@ -902,6 +982,11 @@
                 "type": "string"
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Reports_GetBillable": {
+            "$ref": "./examples/Reports_GetBillable_MaximumSet_Gen.json"
           }
         }
       }
@@ -945,6 +1030,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "Reports_GetSnapshot": {
+            "$ref": "./examples/Reports_GetSnapshot_MaximumSet_Gen.json"
+          }
         }
       }
     },
@@ -986,6 +1076,11 @@
                 "type": "string"
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Reports_GetSummary": {
+            "$ref": "./examples/Reports_GetSummary_MaximumSet_Gen.json"
           }
         }
       }
@@ -1049,6 +1144,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SavedFilters_ListSavedFilter": {
+            "$ref": "./examples/SavedFilters_ListSavedFilter_MaximumSet_Gen.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1091,6 +1191,11 @@
                 "type": "string"
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SavedFilters_GetSavedFilter": {
+            "$ref": "./examples/SavedFilters_GetSavedFilter_MaximumSet_Gen.json"
           }
         }
       },
@@ -1139,6 +1244,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "SavedFilters_PutSavedFilter": {
+            "$ref": "./examples/SavedFilters_PutSavedFilter_MaximumSet_Gen.json"
+          }
         }
       },
       "delete": {
@@ -1174,6 +1284,11 @@
                 "type": "string"
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SavedFilters_DeleteSavedFilter": {
+            "$ref": "./examples/SavedFilters_DeleteSavedFilter_MaximumSet_Gen.json"
           }
         }
       }
@@ -1245,6 +1360,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Tasks_ListTask": {
+            "$ref": "./examples/Tasks_ListTask_MaximumSet_Gen.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1288,6 +1408,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "Tasks_GetTask": {
+            "$ref": "./examples/Tasks_GetTask_MaximumSet_Gen.json"
+          }
         }
       }
     },
@@ -1328,6 +1453,11 @@
                 "type": "string"
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Tasks_CancelTask": {
+            "$ref": "./examples/Tasks_CancelTask_MaximumSet_Gen.json"
           }
         }
       }
