--- a/specification/riskiq/data-plane/Microsoft.Easm/preview/2023-03-01-preview/examples/Tasks_CancelTask_MaximumSet_Gen.json
+++ b/specification/riskiq/data-plane/Microsoft.Easm/preview/2023-03-01-preview/examples/Tasks_CancelTask_MaximumSet_Gen.json
@@ -1,5 +1,6 @@
 {
   "operationId": "Tasks_CancelTask",
+  "title": "Tasks_CancelTask",
   "parameters": {
     "api-version": "2023-03-01-preview",
     "subscriptionId": "00000000-0000-0000-0000-000000000000",
