--- a/specification/cognitiveservices/ContentSafetyInternal/tspconfig.yaml
+++ b/specification/cognitiveservices/ContentSafetyInternal/tspconfig.yaml
@@ -26,6 +26,6 @@ options:
   #   packageDetails:
   #     name: "@azure-rest/contentsafety-rest"
   #     description: "ContentSafety Service"
-  # "@azure-tools/typespec-java":
-  #   package-dir: "contentsafety"
-  #   namespace: com.contentsafety
+  "@azure-tools/typespec-java":
+    package-dir: "azure-ai-contentsafetyinternal"
+    namespace: com.azure.ai.contentsafetyinternal
