Add apiTryOutEnabledState properties for api portal for 2023-09-01-preview api version

--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -14250,6 +14250,15 @@
             "$ref": "#/definitions/ApiPortalInstance"
           },
           "readOnly": true
+        },
+        "apiTryOutEnabledState": {
+          "description": "Indicates whether the API try-out feature is enabled or disabled. When enabled, users can try out the API by sending requests and viewing responses in API portal. When disabled, users cannot try out the API.",
+          "type": "string",
+          "default": "Enabled",
+          "enum": [
+            "Enabled",
+            "Disabled"
+          ]
         }
       }
     },
