Add x-ms-enum for API portal apiTryOutEnabledState property

--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -14258,7 +14258,11 @@
           "enum": [
             "Enabled",
             "Disabled"
-          ]
+          ],
+          "x-ms-enum": {
+            "name": "ApiPortalApiTryOutEnabledState",
+            "modelAsString": true
+          }
         }
       }
     },
