support war file deployment (#25312)
Co-authored-by: Yi Li <yili7@microsoft.com>

--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -12311,6 +12311,30 @@
       },
       "x-ms-discriminator-value": "Jar"
     },
+    "WarUploadedUserSourceInfo": {
+      "description": "Uploaded War binary for a deployment",
+      "type": "object",
+      "allOf": [
+        {
+          "$ref": "#/definitions/UploadedUserSourceInfo"
+        }
+      ],
+      "properties": {
+        "runtimeVersion": {
+          "description": "Runtime version of the war file",
+          "type": "string"
+        },
+        "jvmOptions": {
+          "description": "JVM parameter",
+          "type": "string"
+        },
+        "serverVersion": {
+          "description": "Server version, currently only Apache Tomcat is supported",
+          "type": "string"
+        }
+      },
+      "x-ms-discriminator-value": "War"
+    },
     "SourceUploadedUserSourceInfo": {
       "description": "Uploaded Java source code binary for a deployment",
       "type": "object",
