--- a/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/testconfiguration.json
+++ b/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/testconfiguration.json
@@ -878,7 +878,8 @@
           "default": "Queued",
           "enum": [
             "Queued",
-            "Rejected"
+            "Rejected",
+            "NoPackagesFound"
           ],
           "x-ms-enum": {
             "name": "status",
